<resources>
    <!--Generic stuff-->
    <string name="app_name">Location Based Reminder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="undo">Undo</string>
    <string name="add_to_reminder">Add to Reminder</string>
    <string name="delete_all">Delete All</string>
    <string name="msg_delete_item">Are you sure you want to delete this?</string>
    <string name="location_permission_allow_all_the_time">You need to allow location permission all the time to use Location Based Reminder</string>
    <string name="location_permission_allow_location">You need to grant location permission to use Location Based Reminder</string>
    <string name="grant_location_permission">Please grant location permissions</string>
    <string name="change_layout">Change Layout</string>

    <!--Reminders-->
    <string name="reminders">Reminders</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="place">Place</string>
    <string name="place_group">Place Group</string>
    <string name="not_selected_place_yet">You haven\'t selected a place or a place group yet.</string>
    <string name="remind_me_here">Remind me here:</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="note_optional">Note(Optional)</string>
    <string name="title_optional">Title(Optional)</string>
    <string name="msg_place_was_removed">The place or place group linked to this reminder was removed</string>
    <string name="msg_place_group_does_not_contain_any_place">This place group does not contain any place</string>
    <string name="msg_delete_all_reminders">Are you sure you want to delete all of your reminders?</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="provide_a_place">You have to add a place or a place group in order to create a reminder</string>
    <string name="pick_a_place">Pick a Place</string>
    <string name="pick_a_place_group">Pick a Place Group</string>
    <string name="location_reminder_on">Location reminder is on</string>
    <string name="youve_arrived_to">You\'ve arrived to %s!</string>
    <string name="reset">RESET</string>
    <string name="msg_empty_reminders">You haven\'t added any reminder yet, click the button down below and add your first reminder!</string>
    <string name="msg_empty_places_dialog">You haven\'t added any place yet, click the + button add your first place!</string>
    <string name="msg_empty_places_groups_dialog">You haven\'t added any place group yet, click the + button add your first place group!</string>
    <string name="new_reminder_caps">NEW REMINDER</string>

    <!--Notes-->
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_deleted">Note deleted</string>
    <string name="msg_delete_all_notes">Are you sure you want to delete all of your notes?</string>
    <string name="msg_empty_notes">You haven\'t added any note yet, click the button down below and add your first note!</string>
    <string name="new_note_caps">NEW NOTE</string>

    <!--Places-->
    <string name="places">Places</string>
    <string name="new_place">New Place</string>
    <string name="add_place">Add Place</string>
    <string name="name_this_place">Name This Place</string>
    <string name="place_deleted">Place deleted</string>
    <string name="error_empty_place_name">Place name can not be empty</string>
    <string name="radius_text">%dm</string>
    <string name="msg_delete_all_places">Are you sure you want to delete all of your places?</string>
    <string name="msg_empty_places">You haven\'t added any place yet, click the button down below and add your first place!</string>
    <string name="cannot_connect_play_services">Can not connect to play services</string>
    <string name="google_services_not_available">Google services are not available</string>
    <string name="marker_snippet">If you set a reminder here, you will be notified when you are \nwithin %d meters of this location</string>
    <string name="new_place_caps">NEW PLACE</string>

    <!--Place Groups-->
    <string name="place_groups">Place Groups</string>
    <string name="new_place_group">New Place Group</string>
    <string name="msg_delete_all_place_groups">Are you sure you want to delete all of your place groups?</string>
    <string name="msg_empty_place_group">No place added</string>
    <string name="msg_empty_place_groups">You haven\'t added any place group yet, click the button down below and add your first place group!</string>
    <string name="error_empty_place_group_name">Place group name can not be empty</string>
    <string name="place_group_deleted">Place group deleted</string>
    <string name="pick_places">Pick Places</string>
    <string name="msg_no_available_place">There is no available place to add.</string>
    <string name="create_new_place">Create New Place</string>
    <string name="new_place_group_caps">NEW PLACE GROUP</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="default_range">Default Range (m):</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_body">Help us by rating. Your Play Store reviews make a difference!</string>
    <string name="rate_us_button">Rate us on Play Store</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_body">Tell us what you love about the app, or what we could be doing better. Your comments and suggestions are greatly appreciated.</string>
    <string name="feedback_button">Send Feedback</string>
    <string name="contribute">Contribute</string>
    <string name="contribute_body">Location Based Reminders is an open-source project for the Android platform. You can contribute to this project on GitHub.</string>
    <string name="contribute_button">See project on Github</string>
    <string name="app_name_and_version">Location Based Reminder\n v%s</string>
    <string name="feedback_subject">Location Based Reminder Feedback</string>
    <string name="email">Email</string>
    <string name="enter_valid_range">Please enter a value between 10 and 1000</string>
    <string name="reminder_deactivated_place_removed">A reminder was deactivated because the place or the place group linked to it was removed</string>
    <string name="reminder_deactivated_empty_place_group">A reminder was deactivated because the place group linked to it does not contain any place</string>

</resources>
